k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: plantya-dev
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      name: auth-service
      labels:
        app: auth-service
    spec:
      resources:
        requests:
          cpu: 200m
          memory: 256Mi
        limits:
          cpu: 300m
          memory: 512Mi
      containers:
        - name: auth-service
          image: registry.digitalocean.com/plantya-registry/auth-service:${IMAGE_TAG}
          ports:
            - containerPort: 8080
