k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: plantya-dev
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
